tests/regression/error/hw5_error17.nex
fun f(a,a)
{
   print (a);
   print (":n");
   print (a);
   print (":n");
}

f(1, 2);
